--- a/services.html
+++ b/services.html
@@ -272,7 +272,7 @@
 
 
     <!-- HUMAN RESOURCES & PAYROLL SECTION -->
-    <section id="compliance" class="py-32 bg-white">
+    <section id="hr" class="py-32 bg-white">
         <div class="container mx-auto px-4 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
 
@@ -424,7 +424,7 @@
     </section>
 
     <!-- COMPLIANCE & SECRETARIAL SECTION -->
-    <section class="py-32 bg-[#F8FAFC]">
+    <section id="compliance" class="py-32 bg-[#F8FAFC]">
         <div class="container mx-auto px-4 lg:px-8">
             <div class="grid md:grid-cols-2 gap-12 items-center">
 
